Implementa requisitos da disciplina e revisa frontend profissional